--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,47 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/spade_xlarge">
-
-        <androidx.cardview.widget.CardView
-            android:layout_marginTop="@dimen/spade_medium"
-            android:id="@+id/cv_img"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            app:cardBackgroundColor="@android:color/transparent"
-            app:cardCornerRadius="250dp"
-            app:layout_constraintBottom_toTopOf="@id/cv_info"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
 
 
-
-            <ImageView
-                android:id="@+id/profile_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_person" />
-
-
-
-        </androidx.cardview.widget.CardView>
-
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/spade_middle"
-            android:elevation="@dimen/spade_medium"
-            app:cardBackgroundColor="@color/bg_white_700"
-            app:cardCornerRadius="@dimen/spade_medium"
-            app:cardElevation="@dimen/spade_large"
-            app:layout_constraintTop_toBottomOf="@id/cv_img">
 
 
             <LinearLayout
@@ -68,14 +29,49 @@
                 android:paddingRight="@dimen/spade_medium"
                 android:paddingBottom="@dimen/spade_xlarge">
 
+
+                <androidx.cardview.widget.CardView
+                    android:layout_marginTop="@dimen/spade_medium"
+                    android:id="@+id/cv_img"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    app:cardBackgroundColor="@android:color/transparent"
+                    app:cardCornerRadius="250dp"
+                >
+
+                    <ImageView
+                        android:id="@+id/profile_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_person" />
+
+
+
+                </androidx.cardview.widget.CardView>
+
+
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/first_and_last_name"
                     android:gravity="center"
                     android:id="@+id/tv_name"
-                    android:textColor="@color/black"
-                    android:textSize="35sp"/>
+                    android:textColor="@color/white"
+                    android:textSize="25sp"/>
+
+
+                <RatingBar
+                    android:layout_marginTop="@dimen/spade_large"
+                    android:id="@+id/ratingBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:rating="3"
+
+                    android:numStars="5"/>
+
 
                 <TextView
                     android:layout_width="match_parent"
@@ -84,15 +80,8 @@
                     android:text="@string/Bio"
                     android:id="@+id/tv_bio"
                     android:gravity="center|right"
-                    android:textColor="@color/black"
-                    android:textSize="25sp"/>
-                <RatingBar
-                    android:layout_marginTop="@dimen/spade_large"
-                    android:id="@+id/ratingBar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:numStars="5"/>
+                    android:textColor="@color/white"
+                    android:textSize="20sp"/>
 
 
 
@@ -103,13 +92,11 @@
             </LinearLayout>
 
 
-        </androidx.cardview.widget.CardView>
 
 
 
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
 
@@ -120,7 +107,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/recycler_viwe"
-        android:layout_margin="@dimen/spade_medium"
+
         />
 
 
