--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,16 +7,11 @@
     android:layout_height="match_parent"
     android:background="@color/bademjooni"
     tools:context=".MainActivity">
-
     <ScrollView
         android:id="@+id/scroll_view"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-
-
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -46,13 +40,10 @@
                         android:scaleType="centerCrop"
                         android:src="@drawable/ic_person" />
 
-
-
                 </androidx.cardview.widget.CardView>
 
-
-
                 <TextView
+                    android:layout_marginTop="@dimen/spade_small"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/first_and_last_name"
@@ -61,22 +52,20 @@
                     android:textColor="@color/white"
                     android:textSize="25sp"/>
 
-
                 <RatingBar
-                    android:layout_marginTop="@dimen/spade_large"
                     android:id="@+id/ratingBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:scaleX="0.7"
+                    android:scaleY="0.7"
                     android:rating="3"
-
                     android:numStars="5"/>
-
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/text_size_large"
+                    android:layout_marginTop="@dimen/spade_small"
                     android:text="@string/Bio"
                     android:id="@+id/tv_bio"
                     android:gravity="center|right"
@@ -85,18 +74,7 @@
 
 
 
-
-
-
-
             </LinearLayout>
-
-
-
-
-
-
-
 
     </ScrollView>
 
@@ -107,10 +85,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/recycler_viwe"
-
         />
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
