--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -1,38 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/bg_items"
-    android:padding="@dimen/spade_middle"
-    android:layout_height="wrap_content">
 
 
-    <TextView
-        android:id="@+id/rv_project_name"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="برنامه پارتنر"
-        android:textSize="@dimen/text_size_xlarge"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-
-        />
-
-    <TextView
-        android:id="@+id/tv_remainder_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="زمان باقی مانده :۲ روز"
-        android:textSize="@dimen/text_size_large"
-        app:layout_constraintTop_toBottomOf="@id/rv_project_name"
-        app:layout_constraintRight_toRightOf="parent"
-        android:textColor="@color/black"
-
+        android:background="@drawable/bg_items"
         >
 
-    </TextView>
+        <TextView
+            android:layout_margin="@dimen/spade_medium"
+            android:id="@+id/rv_project_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="برنامه پارتنر"
+            android:elevation="@dimen/spade_large"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_xlarge"
+            android:textStyle="bold"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+
+            />
+
+        <TextView
+            android:id="@+id/tv_remainder_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="زمان باقی مانده :۲ روز"
+            android:elevation="@dimen/spade_large"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_large"
+            android:layout_marginBottom="@dimen/spade_medium"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="@id/rv_project_name"
+            app:layout_constraintTop_toBottomOf="@id/rv_project_name"
+
+            >
+
+        </TextView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.cardview.widget.CardView
+        android:backgroundTint="#E3D9F8"
+        android:layout_margin="@dimen/spade_very_small"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:cardCornerRadius="@dimen/spade_large"
+
+
+        >
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:progressDrawable="@drawable/bg_progress_bar"
+            android:progress="90"
+            android:max="100"
+            android:scaleY="100"/>
+
+
+    </androidx.cardview.widget.CardView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
