--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -7,6 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_items"
+    android:layout_margin="2dp"
         >
 
         <TextView
@@ -57,6 +58,7 @@
 
         >
         <ProgressBar
+            android:id="@+id/progress_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
