--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bademjooni"
     tools:context=".MainActivity">
-    <ScrollView
-        android:id="@+id/scroll_view"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-            <LinearLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cl_profile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#F6ECF3"
+            android:layout_margin="@dimen/spade_small"
+            app:cardCornerRadius="@dimen/spade_medium"
+            app:layout_constraintTop_toTopOf="parent"
+            >
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:padding="@dimen/spade_middle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:paddingLeft="@dimen/spade_medium"
-                android:paddingRight="@dimen/spade_medium"
-                android:paddingBottom="@dimen/spade_xlarge">
 
+
+                >
 
                 <androidx.cardview.widget.CardView
-                    android:layout_marginTop="@dimen/spade_medium"
                     android:id="@+id/cv_img"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
+                    android:layout_margin="@dimen/spade_medium"
                     app:cardBackgroundColor="@android:color/transparent"
                     app:cardCornerRadius="250dp"
-                >
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <ImageView
                         android:id="@+id/profile_image"
@@ -42,49 +52,61 @@
                 </androidx.cardview.widget.CardView>
 
                 <TextView
-                    android:layout_marginTop="@dimen/spade_small"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/first_and_last_name"
-                    android:gravity="center"
                     android:id="@+id/tv_name"
-                    android:textColor="@color/white"
-                    android:textSize="25sp"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spade_small"
+                    android:layout_marginRight="@dimen/spade_large"
+                    android:gravity="center"
+                    android:text="@string/first_and_last_name"
+                    android:textColor="@color/black"
+                    android:textSize="25sp"
+                    app:layout_constraintRight_toLeftOf="@id/cv_img"
+                    app:layout_constraintTop_toTopOf="@id/cv_img" />
 
                 <RatingBar
                     android:id="@+id/ratingBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:scaleX="0.7"
-                    android:scaleY="0.7"
+                    android:layout_marginRight="68dp"
+                    android:numStars="5"
                     android:rating="3"
-                    android:numStars="5"/>
+                    android:scaleX="0.5"
+                    android:scaleY="0.5"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
                 <TextView
+
+                    android:id="@+id/tv_bio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spade_small"
-                    android:text="@string/Bio"
-                    android:id="@+id/tv_bio"
+                    android:layout_marginTop="@dimen/spade_large"
                     android:gravity="center|right"
-                    android:textColor="@color/white"
-                    android:textSize="20sp"/>
+                    android:text="@string/Bio"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintTop_toBottomOf="@id/cv_img" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
 
 
 
-            </LinearLayout>
+        <androidx.recyclerview.widget.RecyclerView
 
-    </ScrollView>
+            android:layout_marginTop="@dimen/spade_large"
+            android:id="@+id/recycler_viwe"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:background="@drawable/rectangle_shape"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/scroll_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:id="@+id/recycler_viwe"
-        />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cl_profile" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.core.widget.NestedScrollView>
