--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Theme.MiniProject3" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/bademjooni</item>
+        <item name="fontFamily">@font/peyda_bold</item>
         <item name="colorPrimaryVariant">@color/bademjooni</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
