--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -42,10 +42,26 @@
 
         </TextView>
 
+    <TextView
+
+        android:id="@+id/percent_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0%"
+        android:elevation="@dimen/spade_large"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size_medium"
+        android:textStyle="bold"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        />
 
 
     <androidx.cardview.widget.CardView
-        android:backgroundTint="#E3D9F8"
+        android:backgroundTint="@color/white"
         android:layout_margin="@dimen/spade_very_small"
         android:layout_width="0dp"
         android:layout_height="0dp"
