--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,7 +10,7 @@
     <dimen name="text_size_2xlarge">30sp</dimen>
 
 
-    <dimen name="spade_very_small">3sp</dimen>
+    <dimen name="spade_very_small">3dp</dimen>
     <dimen name="spade_small">5dp</dimen>
     <dimen name="spade_medium">10dp</dimen>
     <dimen name="spade_middle">15dp</dimen>
