change UI , colors and font

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.MiniProject3" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/bademjooni</item>
-        <item name="fontFamily">@font/peyda_bold</item>
-        <item name="colorPrimaryVariant">@color/bademjooni</item>
+        <item name="colorPrimary">@color/bg_white_700</item>
+        <item name="colorPrimaryVariant">@color/bg_white_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
