--- a/app/src/main/res/drawable/bg_items.xml
+++ b/app/src/main/res/drawable/bg_items.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
-        android:width="@dimen/spade_very_small"
-        android:color="#C8BE9B"
+        android:width="0.8dp"
+        android:color="@color/bademjooni"
         >
 
     </stroke>
