--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bademjooni"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
 
@@ -13,14 +13,18 @@
         android:layout_height="match_parent">
 
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
+
             android:id="@+id/cl_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/spade_small"
-            android:backgroundTint="#F6ECF3"
+            android:layout_margin="@dimen/spade_medium"
+            android:backgroundTint="#D3E7F6"
             app:cardCornerRadius="@dimen/spade_medium"
-            app:layout_constraintTop_toTopOf="parent">
+            app:cardElevation="@dimen/spade_100dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:strokeColor="@color/bademjooni"
+            app:strokeWidth="0.5dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -53,60 +57,62 @@
                     android:id="@+id/tv_score"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/spade_large"
-                    android:layout_marginBottom="@dimen/spade_small"
+                   android:layout_marginRight="@dimen/spade_small"
+                    android:layout_marginBottom="1dp"
+                    android:fontFamily="@font/peyda_medium"
                     android:text="3.0"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     app:layout_constraintBottom_toBottomOf="@id/ratingBar"
-                    app:layout_constraintLeft_toLeftOf="@id/ratingBar"
+                   app:layout_constraintRight_toLeftOf="@id/ratingBar"
                     app:layout_constraintTop_toTopOf="@id/ratingBar" />
 
                 <TextView
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spade_small"
+                    android:layout_marginTop="7dp"
                     android:layout_marginRight="@dimen/spade_large"
+                    android:fontFamily="@font/peyda_semibold"
                     android:gravity="center"
                     android:text="@string/first_and_last_name"
                     android:textColor="@color/black"
-                    android:textSize="25sp"
+                    android:textSize="22sp"
                     app:layout_constraintRight_toLeftOf="@id/cv_img"
                     app:layout_constraintTop_toTopOf="@id/cv_img" />
 
 
                 <RatingBar
+                    style="@style/Widget.AppCompat.RatingBar.Small"
                     android:id="@+id/ratingBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:layout_marginRight="68dp"
+                    android:layout_marginTop="@dimen/spade_medium"
                     android:numStars="5"
                     android:rating="3"
-                    android:scaleX="0.5"
-                    android:scaleY="0.5"
-                    app:layout_constraintRight_toRightOf="parent"
+
+                    app:layout_constraintRight_toRightOf="@id/tv_name"
                     app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
                 <TextView
-
                     android:id="@+id/tv_bio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/spade_large"
+                    android:fontFamily="@font/peyda_medium"
                     android:gravity="center|right"
                     android:text="مهارت:برنامه نویس اندروید-فوتوشاپ\n
 شغل : کاراموز\n
 مدرک: فوق دکترای نرم افزار
 "
                     android:textColor="@color/black"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     app:layout_constraintTop_toBottomOf="@id/cv_img" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
 
         <androidx.recyclerview.widget.RecyclerView
