--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -1,39 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/spade_medium"
+    android:layout_marginRight="@dimen/spade_medium"
+    android:layout_marginBottom="@dimen/spade_medium"
+    android:backgroundTint="#e3f2fd"
+    app:cardCornerRadius="@dimen/spade_large"
+    app:strokeColor="@color/bademjooni"
+    app:cardElevation="@dimen/spade_2xlarge"
+    app:strokeWidth="0.7dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_items"
-    android:layout_margin="2dp"
-        >
+        android:layout_height="wrap_content">
 
         <TextView
-            android:layout_margin="@dimen/spade_medium"
             android:id="@+id/rv_project_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="برنامه پارتنر"
+            android:layout_margin="@dimen/spade_medium"
             android:elevation="@dimen/spade_large"
+            android:fontFamily="@font/peyda_semibold"
+            android:text="برنامه پارتنر"
             android:textColor="@color/black"
-            android:textSize="@dimen/text_size_xlarge"
-            android:textStyle="bold"
+            android:textSize="@dimen/_15sdp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
 
             />
 
         <TextView
+
             android:id="@+id/tv_remainder_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="زمان باقی مانده :۲ روز"
-            android:elevation="@dimen/spade_large"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_large"
             android:layout_marginBottom="@dimen/spade_medium"
+            android:elevation="@dimen/spade_large"
+            android:fontFamily="@font/peyda_medium"
+            android:text="زمان باقی مانده :۲ روز"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="@id/rv_project_name"
             app:layout_constraintTop_toBottomOf="@id/rv_project_name"
@@ -42,48 +51,19 @@
 
         </TextView>
 
-    <TextView
-
-        android:id="@+id/percent_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0%"
-        android:elevation="@dimen/spade_large"
-        android:textColor="@color/black"
-        android:textSize="@dimen/text_size_medium"
-        android:textStyle="bold"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-
-        />
-
-
-    <androidx.cardview.widget.CardView
-        android:backgroundTint="@color/white"
-        android:layout_margin="@dimen/spade_very_small"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:cardCornerRadius="@dimen/spade_large"
-
-
-        >
         <ProgressBar
+
             android:id="@+id/progress_bar"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:progressDrawable="@drawable/bg_progress_bar"
-            android:progress="90"
             android:max="100"
-            android:scaleY="100"/>
+            android:progress="50"
+            android:progressDrawable="@drawable/bg_progress_bar"
+            android:scaleY="100" />
 
-
-    </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.card.MaterialCardView>
+
+
