--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="#f2f2f2"
     tools:context=".MainActivity">
 
 
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/spade_medium"
-            android:backgroundTint="#D3E7F6"
+            android:backgroundTint="@color/white"
             app:cardCornerRadius="@dimen/spade_medium"
             app:cardElevation="@dimen/spade_large"
             app:layout_constraintTop_toTopOf="parent"
