--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,24 +34,21 @@
 
                 >
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cv_img"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="@dimen/spade_medium"
-                    app:cardBackgroundColor="@android:color/transparent"
-                    app:cardCornerRadius="250dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
 
-                    <ImageView
-                        android:id="@+id/profile_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_margin="@dimen/spade_medium"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:civ_border_width="0.5dp"
+                        app:civ_border_color="@color/bademjooni"
+                        android:id="@+id/cv_img"
                         android:scaleType="centerCrop"
                         android:src="@drawable/ic_person" />
 
-                </androidx.cardview.widget.CardView>
+
 
                 <TextView
                     android:id="@+id/tv_score"
