--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <com.google.android.material.card.MaterialCardView
 
             android:id="@+id/cl_profile"
@@ -55,13 +54,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/spade_small"
-                    android:layout_marginBottom="1dp"
+                    android:layout_marginBottom="4dp"
                     android:fontFamily="@font/peyda_medium"
                     android:text="3.0"
                     android:textColor="@color/black"
-                    android:textSize="15sp"
+                    android:textSize="16sp"
+                    android:layout_marginLeft="30dp"
+
                     app:layout_constraintBottom_toBottomOf="@id/ratingBar"
-                   app:layout_constraintRight_toLeftOf="@id/ratingBar"
+                    app:layout_constraintLeft_toLeftOf="@id/ratingBar"
                     app:layout_constraintTop_toTopOf="@id/ratingBar" />
 
                 <TextView
@@ -80,16 +81,17 @@
 
 
                 <RatingBar
-                    style="@style/Widget.AppCompat.RatingBar.Small"
+
                     android:id="@+id/ratingBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
                     android:layout_marginTop="@dimen/spade_medium"
                     android:numStars="5"
                     android:rating="3"
-
-                    app:layout_constraintRight_toRightOf="@id/tv_name"
+                    android:scaleX="0.5"
+                    android:scaleY="0.5"
+                    android:layout_marginRight="70dp"
+                    app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
                 <TextView
@@ -111,7 +113,6 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
 
-
         <androidx.recyclerview.widget.RecyclerView
 
             android:id="@+id/recycler_viwe"
@@ -121,6 +122,11 @@
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_profile" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/fl_fragment_container"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
