--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     android:layout_marginLeft="@dimen/spade_medium"
     android:layout_marginRight="@dimen/spade_medium"
     android:layout_marginBottom="@dimen/spade_medium"
     android:backgroundTint="#ffffff"
-    app:cardCornerRadius="@dimen/spade_large"
+    app:cardCornerRadius="@dimen/spade_small"
     app:strokeColor="@color/bademjooni"
     app:cardElevation="@dimen/spade_small"
     app:strokeWidth="0.7dp">
@@ -23,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/spade_medium"
             android:elevation="@dimen/spade_large"
-            android:fontFamily="@font/peyda_semibold"
+            android:fontFamily="@font/peyda_bold"
             android:text="برنامه پارتنر"
             android:textColor="@color/black"
             android:textSize="@dimen/_15sdp"
@@ -33,7 +34,6 @@
             />
 
         <TextView
-
             android:id="@+id/tv_remainder_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
