--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -4,14 +4,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:layout_marginLeft="@dimen/spade_medium"
-    android:layout_marginRight="@dimen/spade_medium"
-    android:layout_marginBottom="@dimen/spade_medium"
+    android:layout_height="@dimen/_60sdp"
+    android:layout_marginLeft="@dimen/_8sdp"
+    android:layout_marginRight="@dimen/_8sdp"
+    android:layout_marginBottom="@dimen/_8sdp"
     android:backgroundTint="#ffffff"
-    app:cardCornerRadius="@dimen/spade_small"
+    app:cardCornerRadius="@dimen/_5sdp"
     app:strokeColor="@color/bademjooni"
-    app:cardElevation="@dimen/spade_small"
+    app:cardElevation="@dimen/_5sdp"
     app:strokeWidth="0.7dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,8 +22,8 @@
             android:id="@+id/rv_project_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/spade_medium"
-            android:elevation="@dimen/spade_large"
+            android:layout_margin="@dimen/_10sdp"
+            android:elevation="@dimen/_10sdp"
             android:fontFamily="@font/peyda_bold"
             android:text="برنامه پارتنر"
             android:textColor="@color/black"
@@ -37,8 +37,8 @@
             android:id="@+id/tv_remainder_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/spade_medium"
-            android:elevation="@dimen/spade_large"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:elevation="@dimen/_20sdp"
             android:fontFamily="@font/peyda_medium"
             android:text="زمان باقی مانده :۲ روز"
             android:textColor="@color/black"
