--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,7 +18,7 @@
     <style name="text_input_layout_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">@dimen/spade_medium</item>
+        <item name="android:layout_margin">@dimen/_10sdp</item>
         <item name="hintTextColor">@color/black</item>
         <item name="android:layoutDirection">rtl</item>
 
