--- a/app/src/main/res/drawable/circle_shape.xml
+++ b/app/src/main/res/drawable/circle_shape.xml
@@ -1,10 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <size android:width="120dp"
-        android:height="120dp"/>
-    <stroke android:width="1dp"
-        android:color="@color/black"/>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- Bottom 2dp Shadow -->
+    <item>
+        <shape  android:shape="rectangle">
+
+            <solid android:color="#000" />
+            <corners android:radius="@dimen/_10sdp" />
+            <size android:width="250dp"
+                android:height="50dp"/>
+
+        </shape>
+    </item>
+
+    <!-- White Top color -->
+    <item android:bottom="10px">
+
+        <shape  android:shape="rectangle">
+
+            <solid android:color="#FFFFFF" />
+            <corners android:radius="@dimen/_10sdp" />
+            <size android:width="250dp"
+                android:height="50dp"/>
 
 
-</shape>
+        </shape>
+
+    </item>
+
+
+</layer-list>
