--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="bg_white_700">#fcfcfc</color>
     <color name="purple_bg">#704F84</color>
     <color name="bg_btn_purple">#513960</color>
+    <color name="bg_logo">#704F84</color>
 </resources>
